--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: your-app
-        image: longhh11/your-app:latest  # Thay hhlong1107 bằng Docker Hub username
+        image: longhh11/your-app:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
 ---
